Copy tweaks - removed some projects and added more

--- a/src/content/project/anyrep.mdx
+++ b/src/content/project/anyrep.mdx
@@ -23,11 +23,9 @@ slides:
 
 ## Introduction
 
-Anyrep is an appliance repairs company based in Norwich, and it just so happens that's owned and run by my Dad. As such, I can't leave him without a modern, responsive and SEO-optimised website, and so this exists.
+Anyrep is an appliance repairs company based in Norwich, and it just so happens that's owned and run by my Dad. As such, I can't leave him without a modern, responsive and SEO-optimised website.
 
 This is now the fourth iteration of this site I've built for Anyrep, and this time around I wanted to focus on the basics. That means no half-baked store functionality, no complex booking form and no crazy design. Just a simple, informative site that explains the services and funnels people towards a booking form that doesn't bombard users with never-ending questions.
-
-## Conclusion
 
 Overall this build went super well! The tech stack made development a breeze and Netlify made hosting so simple its hard to imagine having went another route for it.
 
